[gd_scene load_steps=4 format=2]

[ext_resource path="res://spells/nature/nature1.gd" type="Script" id=1]
[ext_resource path="res://spells/nature/Nature1Proj.tscn" type="PackedScene" id=2]

[sub_resource type="Animation" id=1]

resource_name = "spin"
length = 0.9
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="Nature1" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Transform", "Visibility" ]
has_activation = true
speed = null
damage = null
knockback = null

[node name="Leaves" type="Node2D" parent="." index="0"]

[node name="Leaf1" parent="Leaves" index="0" instance=ExtResource( 2 )]

_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Leaf2" parent="Leaves" index="1" instance=ExtResource( 2 )]

[node name="Leaf3" parent="Leaves" index="2" instance=ExtResource( 2 )]

[node name="Leaf4" parent="Leaves" index="3" instance=ExtResource( 2 )]

[node name="Rotation" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = "spin"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/spin = SubResource( 1 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="Tween" type="Tween" parent="." index="2"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Lifetime" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="died" from="Leaves/Leaf1" to="." method="_on_Leaf_died"]

[connection signal="died" from="Leaves/Leaf2" to="." method="_on_Leaf_died"]

[connection signal="died" from="Leaves/Leaf3" to="." method="_on_Leaf_died"]

[connection signal="died" from="Leaves/Leaf4" to="." method="_on_Leaf_died"]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]

[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]


